--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
 		<button id="btnAnterior">Anterior</button>
 		<button id="btnSiguiente">Siguiente</button>
 	</div>
-
-	<script src="app.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+	<!--<script src="app.js"></script>-->
+	<script src="axios.js"></script>
 </body>
 </html>
